--- a/src/styles/fonts.css
+++ b/src/styles/fonts.css
@@ -7,3 +7,8 @@
   font-family: "SourceSans3";
   src: url("/assets/fonts/SourceSans3.ttf") format("truetype");
 }
+
+@font-face {
+  font-family: "Anton";
+  src: url("/assets/fonts/Anton.ttf") format("truetype");
+}
